--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <a href="#">vidhyamythili2002@gmail.com</a>
         <span>| +91-8825471765 | Cheran Managar,Coimbatore-641035 </span>
       </div>
+      <br />
       <div align="center">
         <a href="https://www.linkedin.com/public-profile/settings">LinkedIn</a>
-        <a href="https://github.com/Vidhya213/Vidhya-Resume.git">Github</a>
+        <a href="https://github.com/Vidhya213/Vidhya-Resume.git">| Github</a>
       </div>
     </div>
     <!-- contact details -->
