add html resume

--- a/index.html
+++ b/index.html
@@ -21,5 +21,154 @@
       </div>
     </div>
     <!-- contact details -->
+
+    <!-- objective-->
+    <div>
+      <hr />
+      <h2 align="center">OBJECTIVE</h2>
+      <p align="center">
+        To Kickstart my career in web development and leverage my relevant
+        skills and education to contribute effectively in a progressive
+        organization.I am a motivated and adaptable individual with a strong
+        passion in Frontend development and a desire to continuously learn and
+        grow.I aim to make a meaningful contribution to the success of the
+        company while gaining valuable experience and buliding a soild
+        foundation for my future career.
+      </p>
+      <hr />
+    </div>
+    <!-- objective -->
+
+    <!-- skills -->
+    <div align="center">
+      <h2>SKILLS</h2>
+      <span
+        >C | C++ | Data Structure | HTML | CSS | Self-motivated | Quick Learner
+      </span>
+      <hr />
+    </div>
+
+    <!-- skills -->
+
+    <!-- experience -->
+    <div>
+      <h2 align="center">EXPERIENCE</h2>
+      <h3>Project Experience</h3>
+      <h4>Mini Project</h4>
+      <ul>
+        <li>
+          <p>
+            Title - Airline Booking Ticket With Fare Comparison.This is a web
+            based online flight ticket reservation web application.
+          </p>
+        </li>
+      </ul>
+      <ul>
+        <li><p>Tools Used - HTML,CSS[Frontend], MY-SQL[Backend]</p></li>
+      </ul>
+      <h4>Main Project</h4>
+      <ul>
+        <li>
+          <p>
+            Title - Data Confidentiality In Social Network Platform Using RASP
+            Boosting Framework.It provides serval collaborative improving
+            techniques for cloud clients.
+          </p>
+        </li>
+      </ul>
+      <ul>
+        <li><p>Tools Used - Apache Netbeans</p></li>
+      </ul>
+      <h3>Internship</h3>
+      <h4>KarmaDev.in NextGen IT Solution,Erode</h4>
+      <p>
+        I had successfully participated in "INTERNSHIP ON WEB DEVELOPMENT" on 20
+        FEB[2023].
+      </p>
+      <h3>Volunteer Experience</h3>
+      <h4>Velalar College Of Engineering And Technology,Erode</h4>
+      <p>Rotary Club Member Volunteer Experience</p>
+      <ul>
+        <li>
+          Coordinated events with senior team members, and we conducted 30+
+          blood camps from college.
+        </li>
+      </ul>
+    </div>
+    <!-- experience -->
+
+    <!-- Education -->
+    <hr />
+    <div>
+      <h2 align="center">EDUCATION</h2>
+      <h4>Velalar College Of Engineering And Technology,Erode</h4>
+      <p>B-Tech Information Technology -85%</p>
+      <p>2019-2023</p>
+      <h4>Vivekananda Vidyalaya Matric Higher Secondary School,Muthur</h4>
+      <p>HSC -70%</p>
+      <p>2018-2019</p>
+      <h4>Vivekananda Vidyalaya Matric Higher Secondary School,Muthur</h4>
+      <p>SSLC -70%</p>
+      <p>2016-2017</p>
+    </div>
+    <!-- Education -->
+
+    <!-- Certificates -->
+    <hr />
+    <h2 align="center">CERTIFICATES</h2>
+    <ul>
+      <li>
+        Completed a certificate of completion in "Essentials on C++" at
+        Livewire.
+      </li>
+    </ul>
+    <ul>
+      <li>Completed a course in "Data Analytics With Python" at NPTEL.</li>
+    </ul>
+    <ul>
+      <li>
+        Attended a 4th[ICIEICE'23] with the paper title of "Data Confidentiality
+        In Social Network Platform Using RASP Boosting Framework" at Kongunadu
+        College Of Engineering And Technology,Tiruchirappalli.
+      </li>
+    </ul>
+    <h3>Academic Participation</h3>
+    <ul>
+      <li>
+        Active participation in "Budding Techno Engineer's Contest-2022"
+        conducted by Elevator club.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Completed a course in "Completion On HTML Training" at Spoken Tutorial.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Completed a Five day Workshop of "Fullstack Web Development" at
+        Livewire.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Attended a Project Expo-2023 with the paper title of "Data
+        Confidentiality In Social Network Platform Using RASP Boosting
+        Framework" at Velalar College of Engineering And Technology,Erode.
+      </li>
+    </ul>
+    <h3>Ongoing Course</h3>
+    <p>
+      Attending the 6th month course on "Fullstack development" at Skill Safari.
+    </p>
+    <!-- Certificates -->
+
+    <!-- Interest and hobbies -->
+    <hr />
+    <div align="center">
+      <h2>INTEREST/HOBBIES</h2>
+      <p>Gardening | Travelling | Listening Music</p>
+    </div>
+    <!-- Interest and hobbies -->
   </body>
 </html>
